# tic-toc-timer

./: CMakeLists.txt
example/: example.cpp
include/: tic_toc_timer.h  tic_toc_timer.tpp
include/tictoc/: timer.hpp  timer.tpp
src/: main.cpp  tic_toc_timer.cpp  timer.cpp
